[project]
name = "arlo"
version = "0.1.0"
description = "A minimal AI agent"
readme = "README.md"
authors = [{ name = "Jean-Marc Fontaine", email = "jm@jmfontaine.net" }]
requires-python = ">=3.13"
dependencies = ["anthropic>=0.77.0"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
